refactor(Controllers in Order, OrderTable, TableGroup): change API Data Class from Domain To DTO